FIX: Update cmake to include g++ for windows

--- a/tools/scripts/cmake/splashkitcpp/CMakeLists.txt
+++ b/tools/scripts/cmake/splashkitcpp/CMakeLists.txt
@@ -117,6 +117,9 @@ get_filename_component(SK_DEPLOY_ROOT ${SK_DEPLOY_ROOT} ABSOLUTE)
 
 install(TARGETS SplashKitCPP${WIN_NAME_SUFFIX} DESTINATION ${SK_DEPLOY_ROOT}/lib)
 if(MSYS)
+  set(SK_DEPLOY_ROOT "${SK_OUT}/splashkit-windows/commands/g++")
+  get_filename_component(SK_DEPLOY_ROOT ${SK_DEPLOY_ROOT} ABSOLUTE)
+  install(TARGETS SplashKitCPP${WIN_NAME_SUFFIX} DESTINATION ${SK_DEPLOY_ROOT}/lib)
   install(TARGETS SplashKitStarter DESTINATION ${SK_DEPLOY_ROOT}/lib/${WIN_PATH_SUFFIX})
 else()
   install(TARGETS SplashKitStarter DESTINATION ${SK_DEPLOY_ROOT}/lib)
