--- a/projects/cmake/CMakeLists.txt
+++ b/projects/cmake/CMakeLists.txt
@@ -166,6 +166,7 @@ if (MSYS)
                                            stdc++
                                            ws2_32
                                            libncursesw
+                                           setupapi 
                                            )
 elseif(APPLE)
     # To make a universal single static library from dependent
@@ -206,7 +207,7 @@ add_custom_command(TARGET sktest
 if (MSYS)
     add_custom_command(TARGET sktest
         PRE_BUILD COMMAND
-        ${CMAKE_COMMAND} -E copy "${SK_LIB}/win64/*.dll" $<TARGET_FILE_DIR:sktest>)
+        ${CMAKE_COMMAND} -E copy_directory "${SK_LIB}/win64" $<TARGET_FILE_DIR:sktest>)
 endif()
 
 #### END sktest EXECUTABLE ####
