CONFIG: Update appveyor settings

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,7 +23,8 @@ build_script:
     - C:\msys64\usr\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER; git clone --depth 10 https://github.com/splashkit/splashkit --recursive"
     - C:\msys64\usr\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER; git submodule update --init --recursive"
     - C:\msys64\usr\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER/projects/cmake; cmake -G \"Unix Makefiles\" ."
-    - C:\msys64\usr\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER/projects/cmake; make -j 2"
+    - C:\msys64\usr\bin\bash -lc "ls /mingw64/x86_64-w64-mingw32/include/d*.h"
+    - C:\msys64\usr\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER/projects/cmake; CPLUS_INCLUDE_PATH=/mingw64/x86_64-w64-mingw32/include make -j 2"
     - C:\msys64\usr\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER/bin; ./skunit_tests"
 
 test: off
