--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,14 +12,15 @@ environment:
 
 install:
     # - C:\"Program Files (x86)\Microsoft Visual Studio 12.0\VC\vcvarsall.bat"
-    - if defined MSYS_BITS set PATH=C:\msys64\mingw%MSYS_BITS%\bin;C:\msys64\usr\bin;%PATH%
+    - if defined MSYS_BITS set PATH=C:\msys64\mingw%MSYS_BITS%\bin;C:\msys64\usr\bin
     - C:\msys64\usr\bin\bash -lc "pacman --sync --noconfirm pacman-mirrors"
     - C:\msys64\usr\bin\bash -lc "pacman -Syu --noconfirm"
     - C:\msys64\usr\bin\bash -lc "pacman -Syu --noconfirm" # Hackity hack hacks
     # - C:\msys64\usr\bin\bash -lc "pacman --noconfirm -S base-devel mingw-w64-{x86_64,i686}-toolchain"
-    - C:\msys64\usr\bin\bash -lc "pacman --noconfirm -S make wget tar patch dos2unix diffutils ca-certificates mingw-w64-{x86_64,i686}-ca-certificates mingw-w64-{x86_64,i686}-gcc mingw-w64-{x86_64,i686}-gcc-fortran mingw-w64-{x86_64,i686}-libpng mingw-w64-{x86_64,i686}-cmake svn mercurial"
+    - C:\msys64\usr\bin\bash -lc "pacman --noconfirm -S git make wget tar patch dos2unix diffutils ca-certificates mingw-w64-{x86_64,i686}-ca-certificates mingw-w64-{x86_64,i686}-gcc mingw-w64-{x86_64,i686}-gcc-fortran mingw-w64-{x86_64,i686}-libpng mingw-w64-{x86_64,i686}-cmake svn mercurial"
 
 build_script:
+    - C:\msys64\usr\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER; env"
     - C:\msys64\usr\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER; git clone --depth 10 https://github.com/splashkit/splashkit --recursive"
     - C:\msys64\usr\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER; git submodule update --init --recursive"
     - C:\msys64\usr\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER/projects/cmake; cmake -G \"Unix Makefiles\" ."
